# neat

./: .gitignore  CMakeLists.txt  README.md  backgammonstartgenes  bot.cpp  bot.h  experiments.cpp  experiments.h  gene.cpp  gene.h  genome.cpp  innovation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  neat  neat.cpp  neat.h  neatmain.cpp  network.cpp  network.h  nnode.h  organism.h  population.cpp  population.h  trait.h
NEAT.1.2.1/: CMakeLists.txt  gen_10  gen_13  gen_3  gen_5  gen_7  genome.h  nnode.cpp  organism.cpp  trait.cpp
engine/: backgammon.cpp  backgammon.h
engine/bot/: bot.cpp  bot.hpp  connectgene.cpp  connectgene.hpp  genome.cpp  genome.hpp  innovation.cpp  innovation.hpp  link.hpp  neat.cpp  neat.hpp  network.cpp  network.hpp  neuron.hpp  nodegene.hpp  pool.cpp  pool.hpp  progresssignaler.cpp  progresssignaler.hpp  species.cpp  species.hpp
engine/bot/saved_genomes/: lilith_copy.genome  lilith_copy_of_copy.genome  lilith_mutated.genome  lilith_mutated1.genome  lilith_mutated2.genome  lilith_mutated3.genome
engine/core/: boardstate.cpp  boardstate.h  die.cpp  die.h  game.cpp  game.h  gameresult.h  move.cpp  move.h  playercolor.h  point.cpp  point.h  roll.cpp  roll.h  specialposition.h  turn.h
utility/: threadsafequeue.h
